crates/interpreter/tests/it/transfer/snapshots/it__transfer__eth_transfer__integration_eth_transfer.snap
---
source: crates/interpreter/tests/it/transfer/eth_transfer.rs
expression: res
---
InterpretationResponse {
    chain_id: 1,
    gas_used: 21000,
    block_number: 0,
    success: true,
    traces: [
        CallTrace {
            call_type: Call,
            from: 0x4fd9d0ee6d6564e80a9ee00c0163fc952d0a45ed,
            to: 0xa85572cd96f1643458f17340b6f0d6549af482f5,
            value: Some(
                1,
            ),
        },
    ],
    logs: [],
    exit_reason: Stop,
    actions: [
        InterpretationAction {
            action_type: NativeSend,
            address: Some(
                0x4fd9d0ee6d6564e80a9ee00c0163fc952d0a45ed,
            ),
        },
        InterpretationAction {
            action_type: NativeReceive,
            address: Some(
                0xa85572cd96f1643458f17340b6f0d6549af482f5,
            ),
        },
    ],
    asset_changes: [
        AssetChange {
            address: 0x4fd9d0ee6d6564e80a9ee00c0163fc952d0a45ed,
            before_amount: Some(
                4819415871555135,
            ),
            after_amount: Some(
                4819415871555134,
            ),
            amount: 1,
            action: InterpretationAction {
                action_type: NativeSend,
                address: Some(
                    0x4fd9d0ee6d6564e80a9ee00c0163fc952d0a45ed,
                ),
            },
            token: AssetToken {
                address: 0x0000000000000000000000000000000000000000,
                token_id: None,
                token_type: Erc20,
            },
        },
        AssetChange {
            address: 0xa85572cd96f1643458f17340b6f0d6549af482f5,
            before_amount: Some(
                248397011934372040,
            ),
            after_amount: Some(
                248397011934372041,
            ),
            amount: 1,
            action: InterpretationAction {
                action_type: NativeReceive,
                address: Some(
                    0xa85572cd96f1643458f17340b6f0d6549af482f5,
                ),
            },
            token: AssetToken {
                address: 0x0000000000000000000000000000000000000000,
                token_id: None,
                token_type: Erc20,
            },
        },
    ],
}
