crates/interpreter/tests/it/transfer/snapshots/it__transfer__eth_transfer__integration_light_eth_transfer.snap
---
source: crates/interpreter/tests/it/transfer/eth_transfer.rs
expression: res
---
InterpretationResponse {
    chain_id: 10,
    gas_used: 21000,
    block_number: 114445705,
    success: true,
    traces: [
        CallTrace {
            call_type: Call,
            from: 0xfbd80fe5ce1ece895845fd131bd621e2b6a1345f,
            to: 0x4fd9d0ee6d6564e80a9ee00c0163fc952d0a45ed,
            value: Some(
                1,
            ),
        },
    ],
    logs: [],
    exit_reason: Stop,
    actions: [
        InterpretationAction {
            action_type: NativeSend,
            address: Some(
                0xfbd80fe5ce1ece895845fd131bd621e2b6a1345f,
            ),
        },
        InterpretationAction {
            action_type: NativeReceive,
            address: Some(
                0x4fd9d0ee6d6564e80a9ee00c0163fc952d0a45ed,
            ),
        },
    ],
    asset_changes: [
        AssetChange {
            address: 0xfbd80fe5ce1ece895845fd131bd621e2b6a1345f,
            before_amount: Some(
                1000000000000000,
            ),
            after_amount: Some(
                999999999999999,
            ),
            amount: 1,
            action: InterpretationAction {
                action_type: NativeSend,
                address: Some(
                    0xfbd80fe5ce1ece895845fd131bd621e2b6a1345f,
                ),
            },
            token: AssetToken {
                address: 0x0000000000000000000000000000000000000000,
                token_id: None,
            },
        },
        AssetChange {
            address: 0x4fd9d0ee6d6564e80a9ee00c0163fc952d0a45ed,
            before_amount: Some(
                2412758692803309,
            ),
            after_amount: Some(
                2412758692803310,
            ),
            amount: 1,
            action: InterpretationAction {
                action_type: NativeReceive,
                address: Some(
                    0x4fd9d0ee6d6564e80a9ee00c0163fc952d0a45ed,
                ),
            },
            token: AssetToken {
                address: 0x0000000000000000000000000000000000000000,
                token_id: None,
            },
        },
    ],
}
